// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marqueeLoop renders 0 1`] = `
Array [
  .c0 {
  marquee-loop: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: 0;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders function 1`] = `
Array [
  .c0 {
  marquee-loop: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: has;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: has;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders invalid theme path 1`] = `
Array [
  .c0 {
  marquee-loop: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders negative number 1`] = `
Array [
  .c0 {
  marquee-loop: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    marquee-loop: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-loop: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    marquee-loop: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-loop: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-loop: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    marquee-loop: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    marquee-loop: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    marquee-loop: July;
  }
}

@media April {
  .c0 {
    marquee-loop: August;
  }
}

@media January {
  .c0 {
    marquee-loop: September;
  }
}

@media April {
  .c0 {
    marquee-loop: November;
  }
}

@media June {
  .c0 {
    marquee-loop: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    marquee-loop: July;
  }
}

@media April {
  .c0 {
    marquee-loop: August;
  }
}

@media January {
  .c0 {
    marquee-loop: September;
  }
}

@media April {
  .c0 {
    marquee-loop: November;
  }
}

@media June {
  .c0 {
    marquee-loop: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-loop: January;
  }
}

@media April {
  .c0 {
    marquee-loop: December;
  }
}

@media January {
  .c0 {
    marquee-loop: April;
  }
}

@media April {
  .c0 {
    marquee-loop: May;
  }
}

@media June {
  .c0 {
    marquee-loop: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    marquee-loop: January;
  }
}

@media April {
  .c0 {
    marquee-loop: December;
  }
}

@media January {
  .c0 {
    marquee-loop: April;
  }
}

@media April {
  .c0 {
    marquee-loop: May;
  }
}

@media June {
  .c0 {
    marquee-loop: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders postitive number 1`] = `
Array [
  .c0 {
  marquee-loop: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders string 1`] = `
Array [
  .c0 {
  marquee-loop: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: July;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: June;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: June;
}

<div
    className="c0"
  />,
]
`;

exports[`marqueeLoop renders valid theme path 1`] = `
Array [
  .c0 {
  marquee-loop: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  marquee-loop: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
